--- a/ckan/templates/package/new_resource.html
+++ b/ckan/templates/package/new_resource.html
@@ -8,7 +8,7 @@
 
 {% block subtitle %}{{ _('Add data to the dataset') }}{% endblock %}
 
-{% block form %}{% snippet 'package/snippets/resource_form.html', data=data, errors=errors, error_summary=error_summary, include_metadata=false, pkg_name=pkg_name, stage=stage, allow_upload=g.ofs_impl and g.ofs_impl != 'pairtree' and logged_in %}{% endblock %}
+{% block form %}{% snippet 'package/snippets/resource_form.html', data=data, errors=errors, error_summary=error_summary, include_metadata=false, pkg_name=pkg_name, stage=stage, allow_upload=g.ofs_impl and logged_in %}{% endblock %}
 
 {% block secondary_content %}
   {% if pkg_dict and pkg_dict.state != 'draft' %}
