[#1269] Adds resource listing page within edit dataset section
- Also tidys up the edit dataset templats
- Adds a new state to the new resource action that uses a different
template when dataset is no in draft mode (e.g. it's not part of the
dataset wizard creation any more)

--- a/ckan/templates/package/edit.html
+++ b/ckan/templates/package/edit.html
@@ -1,5 +1,7 @@
 {% extends 'package/edit_base.html' %}
 
+{% block subtitle %}{{ _('Edit') }} - {{ h.dataset_display_name(pkg) }}{% endblock %}
+
 {% block primary_content_inner %}
    {% block form %}{{ c.form | safe }}{% endblock %}
 {% endblock %}
