--- a/ckan/templates/package/edit_base.html
+++ b/ckan/templates/package/edit_base.html
@@ -14,8 +14,8 @@
 {% endblock %}
 
 {% block content_primary_nav %}
-  {{ h.build_nav_icon('dataset_edit', _('Edit'), id=pkg.name) }}
-  {#{{ h.build_nav_icon('dataset_resources', _('Resources'), id=pkg.name) }}#}
+  {{ h.build_nav_icon('dataset_edit', _('Edit metadata'), id=pkg.name) }}
+  {{ h.build_nav_icon('dataset_resources', _('Resources'), id=pkg.name) }}
 {% endblock %}
 
 {% block secondary_content %}
