--- a/ckan/templates/package/resource_edit_base.html
+++ b/ckan/templates/package/resource_edit_base.html
@@ -1,28 +1,16 @@
-{% extends "package/base.html" %}
+{% extends "package/edit_base.html" %}
 
 {% set logged_in = true if c.userobj else false %}
-{% set pkg_dict = c.pkg_dict %}
-{% set res = c.resource %}
-
-{% block subtitle %}{{ _('Edit') }} - {{ h.resource_display_name(res) }} - {{ h.dataset_display_name(pkg_dict) }}{% endblock %}
 
 {% block breadcrumb_content_selected %}{% endblock %}
 
-{% block breadcrumb_content %}
+{% block primary_content_inner %}
+  {% link_for _('View all resources'), controller='package', action='resources', id=pkg.name, class_='btn pull-right', icon='arrow-left' %}
+  <h1>{% block form_title %}{{ _('Edit resource') }}{% endblock %}</h1>
+  {% block form %}{% endblock %}
+{% endblock %}
+
+{% block scripts %}
   {{ super() }}
-  <li>{% link_for h.resource_display_name(res)|truncate(30), controller='package', action='resource_read', id=pkg_dict.name, resource_id=res.id %}</li>
-  <li class="active"><a href="">{{ _('Edit') }}</a></li>
-{% endblock %}
-
-{% block content_action %}
-  {% link_for _('View resource'), controller='package', action='resource_read', id=pkg_dict.name, resource_id=res.id, class_='btn', icon='eye-open' %}
-{% endblock %}
-
-{% block content_primary_nav %}
-  {{ h.build_nav_icon('resource_edit', _('Edit'), id=pkg.name, resource_id=res.id) }}
-  {#{{ h.build_nav_icon('dataset_resources', _('Resources'), id=pkg.name) }}#}
-{% endblock %}
-
-{% block secondary_content %}
-  {% snippet 'package/snippets/info.html', pkg=pkg, hide_follow_button=true %}
+  {% resource 'vendor/fileupload' %}
 {% endblock %}
